--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Aarons Programming Lesson!</title>
     </head>
     <body>
+        
+    <img src="csc_bannner.jpg">
     
     <h1>Welcome world to my page!</h1>
     <p> Hello everyone, welcome again to my programming page. 
