--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="csc_bannner.jpg" alt="csc 106 Banner">
         
             <table>
-                <tr> <td> <img src="home.png"></td><td><img src ="apps.png"></td><td><img src"pasted image 0-1.png">
+                <tr> <td> <img src="home.png"></td><td><img src ="pasted image 0-2.png"></td><td><img src"pasted image 0-1.png">
 
                 
     <h1>Welcome world to my page!</h1>
