--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
                 
     <h2>Welcome world to my page!</h2>
-    <p> Hello everyone, welcome again to my programming page. 
-    On this page you will come along with me on my journey to understanding CSS. 
-    There will be alot notes so make sure your following along. 
+    <p> Hello everyone, welcome again to my programming page.<br> 
+    On this page you will come along with me on my journey to understanding CSS.<br> 
+    There will be alot notes so make sure your following along.<br> 
     I hope you enjoy 
         - A </p>
    
